# Market_Data

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: export_handler.py  ods_handler.py  shoping_list_handler.py
data/: .~lock.Lista_compras_praia.ods#  Besteiras.ods  Besteiras.txt  Compras_Brutas.ods  Compras_Brutas.txt  Teste.ods  Teste.txt
