[project]
name = "market-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Rhyan121121",email = "rhyanaa1211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyoo (>=1.4,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false